<resources>
    <string name="app_name">Protect Yourself</string>
    <string name="nav_premium">Premium</string>
    <string name="streak">Streak</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="block_page_default_message">This page is blocked.</string>
    <string name="block_page_default_porn_blocker_message">Your porn blocker switch is on.</string>
    <string name="block_page_default_block_apps_message">Your porn blocker switch is on, and this app is in your block apps list.</string>
    <string name="block_page_default_in_app_browser_message">You have enabled in-app browser blocking for this app.</string>
    <string name="block_page_default_make_any_browser_supported_message">You have enabled make any browser supported blocking.</string>
    <string name="block_page_default_new_install_message">Your block new install app switch is on, and this app is in your new install app block list.</string>
    <string name="block_page_default_notification_drawer_message">Your block notification drawer switch is on.</string>
    <string name="block_page_default_pu_message">Your prevent uninstall switch is on.</string>
    <string name="block_page_default_stop_me_message">Your focus mode session is running, and this app is not on your whitelist of focus mode apps.</string>
    <string name="block_page_default_system_keyword_message">Your title-based block setting is on.</string>
    <string name="block_page_default_safe_search_message">SafeSearch is enabled. You are being redirected to the SafeSearch variant of this search engine.</string>
    <string name="block_page_default_unsupported_browser_message">Your block unsupported browsers switch is on, and this app is not in your whitelist unsupported browsers list.</string>
    <string name="block_phone_reboot_bw_message">Your block phone reboot switch is on.</string>
    <string name="block_recent_apps_bw_message">Your block recent apps screen switch is on.</string>
    <string name="why">Why</string>
    <string name="close">Close</string>
    <string name="play_store_rating_message">Are you finding Protect Yourself helpful? Rate us!</string>
    <string name="stop_me">Stop Me</string>
    <string name="stop_me_widget_description">Quick toggle for Stop Me focus mode</string>
    <string name="streak_widget_description">Today\'s streak counter</string>
    <string name="add">Add</string>
    <string name="approve">Approve</string>
    <string name="active">Active</string>
    <string name="alert">Alert</string>
    <string name="best">Best</string>
    <string name="best_value">Best value</string>
    <string name="backup">Backup</string>
    <string name="blocklist">Blocklist</string>
    <string name="section_alert">Alert</string>
    <string name="section_accountability_partner">Protective Mode</string>
    <string name="section_content_blocking">Content Blocking</string>
    <string name="section_insta_yt_blocking">Social Media Blocking</string>
    <string name="section_uninstall_protection">Uninstall Protection</string>
    <string name="section_advance_feature">Advance feature</string>
    <string name="section_faq">Keep Protect Yourself Live</string>
    <string name="accessibility_service_description">In order to block adult content on your device, Protect Yourself will need this permission (accessibility services). Protect Yourself will also be able to block specific websites/apps that you add to the list of blocked items with this permission.</string>
    <string name="accessibility_service_summary">In order to block adult content on your device, Protect Yourself will need this permission (accessibility services).</string>
    <string name="accessibility_turn_off_alert_message">Protect Yourself uses a system-managed service called BIND_ACCESSIBILITY_SERVICE. To enable blocking, turn this service on / restart it by turning it off and on again.</string>
    <string name="accessibility_turn_off_alert_title">Accessibility permission</string>
    <string name="app_version">App version</string>
    <string name="app_update_version_available">Better, faster app version available</string>
    <string name="accessibility_on_guide_common">Go to Protect Yourself</string>
    <string name="accessibility_on_guide_samsung">Go to Installed Services -> Protect Yourself</string>
    <string name="accessibility_on_guide_xiaomi">Go to More downloaded services -> Protect Yourself</string>
    <string name="accessibility_on_skip">Skip</string>
    <string name="accessibility_checkbox_alert_message">By checking this box, I grant Protect Yourself permission to use the Accessibility service to block adult content.</string>
    <string name="accessibility_checkbox_error_message">Please read and check the box to turn on accessibility service.</string>
    <string name="add_block_list_keyword_page_text_hint">E.g. Adult videos</string>
    <string name="add_custom_dns_page_card_message">Enter 2 valid DNS to overcome porn addiction. To identify this preset, you can enter any name in the name field.</string>
    <string name="add_custom_dns_page_title">Add your custom DNS</string>
    <string name="add_custom_keyword_text_limit_error">There should be at least 2 character in the keyword.</string>
    <string name="add_custom_long_sentence_text_limit_error">Messages must contain at least 20 characters.</string>
    <string name="add_custom_message_hint">Enter message</string>
    <string name="add_in_tag">Add in</string>
    <string name="add_schedule_stop_me_page_title">Add Schedule Focus mode!</string>
    <string name="add_stop_me_schedule_select_days_error">Please select days</string>
    <string name="add_stop_me_schedule_select_duration_error">Please select duration</string>
    <string name="add_stop_me_schedule_select_start_time_error">Please select start time</string>
    <string name="add_white_list_keyword_page_text_hint">E.g. Quit porn</string>
    <string name="add_widget">Add widget</string>
    <string name="add_widget_select_app_guide">"Note: Add the 'Focus mode!' widget after watching the video."</string>
    <string name="add_widget_select_app_guide_streak">"Note: Add the 'Streak' widget after watching the video."</string>
    <string name="app_lock_card_info">By doing this, any unauthorized access to this app is prevented.</string>
    <string name="app_lock_card_title">App lock</string>
    <string name="backup_sync_card_info">"The purpose of this is to backup your keywords, selected apps, and other items. So you don't have to setup the app again and again."</string>
    <string name="backup_sync_card_title">Sync and back up your data</string>
    <string name="battery_level_maintain_message">Maintain a battery level of 20% or higher to keep Protect Yourself running uninterrupted.</string>
    <string name="block_in_app_browsers_card_info">Add apps where you want to block in app browser. As this feature is in beta, it may not detect in-app browsers in all apps.</string>
    <string name="block_in_app_browsers_card_title">Block in-app browsers</string>
    <string name="block_new_install_App_card_info">Newly installed apps will automatically be blocked if this setting is enabled. You can unblock an app by long clicking it.</string>
    <string name="block_new_install_app_card_title">Block new install apps</string>
    <string name="block_recent_app_card_title">Block Recent Apps Screen</string>
    <string name="block_recent_app_info">Using this feature, you will not be able to open recent apps. However, before enabling it, please lock Protect Yourself in recent apps.</string>
    <string name="block_screen_count_card_info">As soon as we prevent you from accessing adult content, this number will increase by one.</string>
    <string name="block_screen_count_card_title">Block screens</string>
    <string name="block_screen_count_down_hint">Enter seconds</string>
    <string name="block_screen_count_down_number_error">Please enter valid number</string>
    <string name="block_settings_page_by_tile_card_info">"This feature does not allow you to open selected settings pages."</string>
    <string name="block_settings_page_by_tile_card_title">Title-based block setting</string>
    <string name="block_unsupported_browser_card_info">All browsers except supported ones will be blocked if the setting is On.</string>
    <string name="block_unsupported_browser_card_title">Block unsupported browsers</string>
    <string name="blocked_screen_countdown_card_info">To dismiss a block screen, you can set a custom duration. Add at least 3 seconds and no more than 300 seconds.</string>
    <string name="blocked_screen_countdown_card_title">Blocked screen countdown</string>
    <string name="blocked_screen_image_card_info">This image will appear above the block screen message on the blocked screen.</string>
    <string name="blocked_screen_image_card_title">Blocked screen image for motivation</string>
    <string name="blocked_screen_message_card_info">In the blocked screen, this message will appear.</string>
    <string name="blocked_screen_message_card_title">Blocked screen message</string>
    <string name="blocklist_app_card_info">The block screen will appear when the app you added opens.</string>
    <string name="blocklist_app_card_title">Blocklist apps</string>
    <string name="blocklist_whitelist_detected_apps_card_info">These are the apps we detect when some event is performed on your phone by them.</string>
    <string name="blocklist_whitelist_detected_apps_card_title">Blocklist whitelist detected apps</string>
    <string name="dns_1_empty_error">To create a preset, please enter DNS 1.</string>
    <string name="dns_2_empty_error">To create a preset, please enter DNS 2.</string>
    <string name="dns_name_empty_error">To create a preset, please enter your DNS name.</string>
    <string name="active_dns_edit_delete_error">Active DNS cannot be edited or deleted.</string>
    <string name="achievement">Achievement</string>
    <string name="advance_feature">Advance feature</string>
    <string name="all_tag">All</string>
    <string name="a_to_z_tag">A to Z</string>
    <string name="app_name_tag">App name</string>
    <string name="delete_account_alert_message">Do you really want to delete your account? All data, including streak progress, will be cleared. Are you ready?</string>
    <string name="instagram_search_reels_blocking_card_info">You will be able to be more productive with this.</string>
    <string name="in_progress">In progress</string>
    <string name="low_rating_message">If you have any suggestions or feedback for improving Protect Yourself, please contact us by email.</string>
    <string name="mi_allow_all_permission_message">Display pop-up window permissions are needed to block inappropriate content effectively with Protect Yourself.</string>
    <string name="protective_mode">Protective Mode</string>
    <string name="protective_mode_not_set_error">Please set protective Mode to modify any settings.</string>
    <string name="protective_mode_request_history_card_info">The request history for all types of protective Modes can be viewed here.</string>
    <string name="protective_mode_section_info">A switch/setting can only be disabled with the approval of a Protective Mode itself.</string>
    <string name="protective_mode_suggest_card_info">Kindly recommend some effective protective modes you would like to have in the app.</string>
    <string name="protective_mode_suggest_card_title">Suggest protective mode</string>
    <string name="protective_mode_suggest_email_subject">Give Suggestion on Protect Yourself protective mode</string>
    <string name="real_friend_card_info">The request to disable a switch/setting needs to be made after your real friend approved.</string>
    <string name="request_already_in_pending_message">"Request already in progress. It can't be sent until first request is completed."</string>
</resources>